--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Southeast Asia Expedition</title>
     <meta name="description" content="A website presenting a planned Cambridge expedition to Southeast Asia">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" /> <!--TODO: Add favicon-->
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" /> <!--TODO: Add favicon-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <noscript><link rel="stylesheet" href="/css/noscript-styles.css" /></noscript>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <noscript><link rel="stylesheet" href="./css/noscript-styles.css" /></noscript>
   </head>
 
   <body class="d-flex flex-column h-100">
@@ -22,19 +22,19 @@
       <header>
         <ul class="noscript-navbar">
           <li class="noscript-navitem">
-            <a id="home" class="nav-link active" href="/index.html">Home</a>
+            <a id="home" class="nav-link active" href="./index.html">Home</a>
           </li>
           <li class="noscript-navitem">
-            <a id="objectives" class="nav-link" href="/objectives.html">Objectives</a>
+            <a id="objectives" class="nav-link" href="./objectives.html">Objectives</a>
           </li>
           <li class="noscript-navitem">
-            <a id="team" class="nav-link" href="/team.html">Team</a>
+            <a id="team" class="nav-link" href="./team.html">Team</a>
           </li>
         </ul>
       </header>
     </div>
 
-    <script src="/js/navbar.js"></script>
+    <script src="./js/navbar.js"></script>
     <script>
       Activate("home");
     </script>
