--- a/team.html
+++ b/team.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Southeast Asia Expedition</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <script defer src="/js/scrollAnimate.js"></script>
-    <noscript><link rel="stylesheet" href="/css/noscript-styles.css" /></noscript>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script defer src="./js/scrollAnimate.js"></script>
+    <noscript><link rel="stylesheet" href="./css/noscript-styles.css" /></noscript>
   </head>
 
   <body class="d-flex flex-column h-100">
@@ -22,18 +22,18 @@
       <header>
         <ul class="noscript-navbar">
           <li class="noscript-navitem">
-            <a id="home" class="nav-link active" href="/index.html">Home</a>
+            <a id="home" class="nav-link active" href="./index.html">Home</a>
           </li>
           <li class="noscript-navitem">
-            <a id="objectives" class="nav-link" href="/objectives.html">Objectives</a>
+            <a id="objectives" class="nav-link" href="./objectives.html">Objectives</a>
           </li>
           <li class="noscript-navitem">
-            <a id="team" class="nav-link" href="/team.html">Team</a>
+            <a id="team" class="nav-link" href="./team.html">Team</a>
           </li>
         </ul>
       </header>
     </div>
-    <script src="/js/navbar.js"></script>
+    <script src="./js/navbar.js"></script>
     <script>
       Activate("team");
     </script>
@@ -50,7 +50,7 @@
         <div class="row hidden noscript-visible" id="Tereza">
           <div class="col-6 my-auto hiddenEl">
             <img
-              src="/img/Tereza.jpg"
+              src="./img/Tereza.jpg"
               alt="Tereza N."
               class="rounded-circle img-fluid"
             />
@@ -67,7 +67,7 @@
         <div class="row hidden noscript-visible" id="Dmitry">
           <div class="col-6 my-auto hiddenEl">
             <img
-              src="/img/Dmitry.jpg"
+              src="./img/Dmitry.jpg"
               alt="Dmitry C."
               class="rounded-circle img-fluid"
             />
@@ -83,7 +83,7 @@
         <div class="row hidden noscript-visible" id="Naomi">
           <div class="col-6 my-auto hiddenEl">
             <img
-              src="/img/Naomi.jpg"
+              src="./img/Naomi.jpg"
               alt="Naomi L."
               class="rounded-circle img-fluid"
             />
@@ -99,7 +99,7 @@
         <div class="row hidden noscript-visible" id="Bruno">
           <div class="col-6 my-auto hiddenEl">
             <img
-              src="/img/Bruno.jpg"
+              src="./img/Bruno.jpg"
               alt="Bruno M."
               class="rounded-circle img-fluid"
             />
@@ -115,7 +115,7 @@
         <div class="row hidden noscript-visible" id="Barbora">
           <div class="col-6 my-auto hiddenEl">
             <img
-              src="/img/Barbora.jpg"
+              src="./img/Barbora.jpg"
               alt="Barbora P."
               class="rounded-circle img-fluid"
             />
@@ -131,7 +131,7 @@
         <div class="row hidden noscript-visible" id="Vojtech">
           <div class="col-6 my-auto hiddenEl">
             <img
-              src="/img/Vojtech.jpg"
+              src="./img/Vojtech.jpg"
               alt="Vojtěch T."
               class="rounded-circle img-fluid"
             />
